// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo agent gateway export "frodo agent gateway export --agent-id frodo-test-ig-agent": should export the gateway agent with agent id "frodo-test-ig-agent" 1`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export --agent-id frodo-test-ig-agent": should export the gateway agent with agent id "frodo-test-ig-agent" 2`] = `
{
  "agents": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "igCdssoLoginUrlTemplate": {
        "inherited": false,
        "value": "http://testurl.com:8080/frodo",
      },
      "igCdssoRedirectUrls": {
        "inherited": false,
        "value": [
          "http://testurl.com:8080/frodo",
        ],
      },
      "igTokenIntrospection": {
        "inherited": false,
        "value": "Realm",
      },
      "status": {
        "inherited": false,
        "value": "Inactive",
      },
      "userpassword": null,
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export --all": should export all gateway agents to a single file 1`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export --all": should export all gateway agents to a single file 2`] = `
{
  "agents": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "status": "Inactive",
      "userpassword": null,
    },
    "frodo-test-ig-agent2": {
      "_id": "frodo-test-ig-agent2",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "status": "Inactive",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export --all-separate": should export all gateway agents to separate files 1`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export --all-separate": should export all gateway agents to separate files 2`] = `
{
  "agents": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "status": "Inactive",
      "userpassword": null,
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export --all-separate": should export all gateway agents to separate files 3`] = `
{
  "agents": {
    "frodo-test-ig-agent2": {
      "_id": "frodo-test-ig-agent2",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "status": "Inactive",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -A": should export all gateway agents to separate files 1`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export -A": should export all gateway agents to separate files 2`] = `
{
  "agents": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "status": "Inactive",
      "userpassword": null,
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -A": should export all gateway agents to separate files 3`] = `
{
  "agents": {
    "frodo-test-ig-agent2": {
      "_id": "frodo-test-ig-agent2",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "status": "Inactive",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -a --file my-allAlphaAgents.gateway.agent.json": should export all gateway agents to a single file named my-allAlphaAgents.gateway.agent.json 1`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export -a --file my-allAlphaAgents.gateway.agent.json": should export all gateway agents to a single file named my-allAlphaAgents.gateway.agent.json 2`] = `
{
  "agents": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "status": "Inactive",
      "userpassword": null,
    },
    "frodo-test-ig-agent2": {
      "_id": "frodo-test-ig-agent2",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "status": "Inactive",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -a": should export all gateway agents to a single file 1`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export -a": should export all gateway agents to a single file 2`] = `
{
  "agents": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "status": "Inactive",
      "userpassword": null,
    },
    "frodo-test-ig-agent2": {
      "_id": "frodo-test-ig-agent2",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "agentgroup": null,
      "igCdssoLoginUrlTemplate": "http://testurl.com:8080/frodo",
      "igCdssoRedirectUrls": [
        "http://testurl.com:8080/frodo",
      ],
      "igTokenIntrospection": "Realm",
      "status": "Inactive",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -i frodo-test-ig-agent -f my-frodo-test-ig-agent.gateway.agent.json.json": should export the gateway agent with agent id "frodo-test-ig-agent" into file named my-frodo-test-ig-agent.gateway.agent.json.json 1`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export -i frodo-test-ig-agent -f my-frodo-test-ig-agent.gateway.agent.json.json": should export the gateway agent with agent id "frodo-test-ig-agent" into file named my-frodo-test-ig-agent.gateway.agent.json.json 2`] = `
{
  "agents": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "igCdssoLoginUrlTemplate": {
        "inherited": false,
        "value": "http://testurl.com:8080/frodo",
      },
      "igCdssoRedirectUrls": {
        "inherited": false,
        "value": [
          "http://testurl.com:8080/frodo",
        ],
      },
      "igTokenIntrospection": {
        "inherited": false,
        "value": "Realm",
      },
      "status": {
        "inherited": false,
        "value": "Inactive",
      },
      "userpassword": null,
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo agent gateway export "frodo agent gateway export -i frodo-test-ig-agent": should export the gateway agent with agent id "frodo-test-ig-agent" 1`] = `""`;

exports[`frodo agent gateway export "frodo agent gateway export -i frodo-test-ig-agent": should export the gateway agent with agent id "frodo-test-ig-agent" 2`] = `
{
  "agents": {
    "frodo-test-ig-agent": {
      "_id": "frodo-test-ig-agent",
      "_type": {
        "_id": "IdentityGatewayAgent",
        "collection": true,
        "name": "Identity Gateway Agents",
      },
      "igCdssoLoginUrlTemplate": {
        "inherited": false,
        "value": "http://testurl.com:8080/frodo",
      },
      "igCdssoRedirectUrls": {
        "inherited": false,
        "value": [
          "http://testurl.com:8080/frodo",
        ],
      },
      "igTokenIntrospection": {
        "inherited": false,
        "value": "Realm",
      },
      "status": {
        "inherited": false,
        "value": "Inactive",
      },
      "userpassword": null,
    },
  },
  "meta": Any<Object>,
}
`;
